--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,10 +4,17 @@ body {
   background-color: #e5e5e584;
 }
 
+h1 {
+  font-size: 60px;
+}
+
+h2 {
+  font-size: 30px;
+}
 #app {
   height: 100%;
   display: grid;
-  grid-template-columns: 60% 1fr;
+  grid-template-columns: 40% 1fr;
   grid-template-rows: 20% auto;
   grid-template-areas: 
     "header header"
@@ -25,8 +32,15 @@ body {
 #editoras {
   grid-area: editoras;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
+
+.img {
+  display: flex;
+  justify-content: center;
+}
+
 
 #capa  {
   grid-area: capa;
@@ -45,8 +59,8 @@ body {
 }
 
 .block {
-  width: 200px;
-  height: 250px;
+  width: 320px;
+  height: 410px;
   border: 1px solid rgb(29, 60, 194);
   border-radius: 15px;
   padding: 10px;
