--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,16 +5,17 @@ body {
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 70px;
   color: #ffe917;
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 40px;
   color: #ffe917;
 }
 
 h3 {
+  font-size: 30px;
   color: #ffe917;
 }
 
@@ -31,12 +32,25 @@ h3 {
 #header {
   grid-area: header;
   text-align: center;
+  border: 15px;
+  padding: 10px;
 }
+
+#capa  {
+  grid-area: capa;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
 #editoras {
   grid-area: editoras;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 50px;
 }
 
 .imagem {
@@ -45,32 +59,24 @@ h3 {
   align-items: center;
 }
 
-
-#capa  {
-  grid-area: capa;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-
-#footer {
-  grid-area: footer;
-}
-#sidenav {
-  grid-area: sidenav;
-}
-
-.block {
-  width: 310px;
-  height: 410px;
+.blockeditoras {
+  width: 250px;
+  height: 500px;
   border: 1px solid #ffe917;
   border-radius: 15px;
   padding: 10px;
   margin: 10px;
   background-color: #1f3544;
 }
-editora.imagem{
+.blockcapa {
+  width: 470px;
+  height: 700px;
+  border: 1px solid #ffe917;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 10px;
+  background-color: #1f3544;
+}
+.editora.imagem {
   margin: 0 auto;
 }
