--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   height: 100vh;
   background-color: #13212b;
+  font-family: 'Sansita', sans-serif
 }
 
 h1 {
@@ -9,20 +10,59 @@ h1 {
   color: #ffe917;
 }
 
-h2 {
-  font-size: 40px;
+.h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  color: #ffe917;
+  margin-top: 0px;
+}
+
+.h2capa {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 38px;
+  color: #ffe917;
+  margin-top: 10px;
+}
+
+.h3capa {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0px;
+  margin-top: 0px;
+  font-size: 28px;
   color: #ffe917;
 }
 
+h2 {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+}
+
 h3 {
-  font-size: 30px;
+  margin: 12px;
+}
+
+.h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0px;
+  margin-top: 0px;
+  font-size: 20px;
   color: #ffe917;
 }
 
 #app {
   height: 100%;
   display: grid;
-  grid-template-columns: 40% 1fr;
+  grid-template-columns: 48% 1fr;
   grid-template-rows: 20% auto;
   grid-template-areas: 
     "header header"
@@ -42,7 +82,7 @@ h3 {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 #editoras {
@@ -57,28 +97,14 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 30px;
 }
-
 
 .imgedit {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 40px;
-}
-
-.h2{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-h3 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 0px;
 }
 
 .blockeditoras {
@@ -91,8 +117,8 @@ h3 {
   background-color: #1f3544;
 }
 .blockcapa {
-  width: 470px;
-  height: 700px;
+  width: 570px;
+  height: 850px;
   border: 1px solid #ffe917;
   border-radius: 15px;
   padding: 10px;
